Fixes #338 Fixes overflow of the words as hashtags present in the paragraphs in wall layouts and in search

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2514,6 +2514,14 @@ a.external_link:hover {
 	text-decoration: underline;
 }
 
+div.tweet-content > p.tweet-content-text {
+	word-wrap: break-word;
+}
+
+div.linear-content.row > p.linear-content-text {
+	word-wrap: break-word;
+}
+
 output {
 	text-align: left;
 	margin-bottom: 10px;
